--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,12 @@
+:root {
+    --my-favorite-color:steelblue;
+} 
+
+
+
+
 nav {
-    background-color: steelblue;
+    background-color: var(--my-favorite-color);
     padding: 10px;
 }
 
@@ -10,13 +17,13 @@ nav a {
 }
 
 h1 {
-    color: steelblue;
+    color: var(--my-favorite-color);
 }
 
 main img {
     width: 150px;
     height: auto;
-    border: 1px solid steelblue;
+    border: 1px solid var(--my-favorite-color);
     padding: 2px;
     box-shadow: 0 0 30px gray;
 }
