--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,18 +11,24 @@
 
 
 nav {
+    display: flex;
     background-color: var(--my-favorite-color);
     padding: 10px;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 nav a {
     color: white;
     display: block;
     padding: 20px;
+    text-decoration: none;
 }
 
 h1 {
     color: var(--my-favorite-color);
+    border-bottom: 1px solid var(--my-favorite-color);
+    padding: 10px;
 }
 
 main img {
@@ -32,20 +38,22 @@ main img {
     padding: 2px;
     box-shadow: 0 0 30px gray;
     float: right;
+    margin-top: 1rem;
 }
 
 p {
     padding: 0;
+    margin-top: 0.5rem;
 }
 
 main {
-    max-width: 840px;
+    /* max-width: 840px; */
 }
 
 aside {
     position: relative;
     width: 20rem;
-    text-align: center;
+    text-align:center;
 }
 
 aside img {
@@ -53,8 +61,9 @@ aside img {
     height: auto;
 }
 
-footer {
-    margin-top: 15px;
+header, .grid, footer {
+    max-width: 840px;
+    margin: 0 auto;
     border-top: 1px solid #000;
     text-align: center;
 }
@@ -68,10 +77,25 @@ aside h2 {
 /* Class Selectors */
 
 .box {
-    margin: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
     border: 1px solid rgba(0, 0, 0,.1);
     padding: 1rem ;
     background-color: #ddd;
     color: #000;
     clear: both;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+}
+
+aside {
+    order: -1;
+}
+
+main {
+    text-align: left;
 }
