--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -31,15 +31,15 @@ ol {
 
 h1 {
     padding: 1.5rem;
-    font-family: "Poppins", serif;
+    /* font-family: "Poppins", serif;
     font-weight: 400;
-    font-style: normal;
+    font-style: normal; */
 }
 
 label, input, button, select, textarea, li {
-    font-family: "Lato", serif;
+    /* font-family: "Lato", serif;
     font-weight: 400;
-    font-style: normal;
+    font-style: normal; */
 }
 
 textarea {
